<resources>
    <string name="app_name">covidsintomas</string>

    <string name="title">Total de casos Confirmados</string>
    <string name="generalView">Visão Geral</string>
    <string name="totalActive">Casos ativos:</string>
    <string name="total_recovered">Casos recuperados:</string>
    <string name="total_deaths">Casos fatais</string>
    <string name="countries">Países</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="noticias">Notícias</string>
    <string name="sintomas">Sintomas</string>
    <string name="meuestado">Meu estado</string>
    <string name="paises">Países</string>
    <string name="confirmados">Confirmados:</string>
    <string name="ativos">Ativos:</string>
    <string name="data">Data:</string>
    <string name="mortos">Mortos:</string>
    <string name="sintcomuns">SINTOMAS COMUNS:</string>
    <string name="sintraros">SINTOMAS RAROS:</string>
    <string name="recomendacoes">RECOMENDAÇÕES:</string>
    <string name="tempodesint">TEMPO DE SINTOMAS:</string>
    <string name="estado">Estado: </string>
    <string name="uf">UF: </string>
    <string name="casos">Casos: </string>
    <string name="mortes">Mortes: </string>
    <string name="suspeitos">Suspeitos: </string>
    <string name="recuperados">Recuperados: </string>
    <string name="descartados">Descartados: </string>
    <string name="voltar">voltar</string>
    <string name="locationerror">"Não foi possível rastrear sua localização. Tente mais tarde"</string>
    <string name="serviceerror">"Serviço indisponível, tente mais tarde."</string>
    <string name="erro">"Erro:  "</string>
    <string name="ok">"Ok"</string>
</resources>