<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shadow_item"></ImageView>

        <TextView
            android:id="@+id/ndata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/data" />

        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/ndata"
            android:layout_toRightOf="@id/ndata" />

        <TextView
            android:id="@+id/nconfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ndata"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/confirmados" />

        <TextView
            android:id="@+id/Confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/nconfirmed"
            android:layout_toRightOf="@id/nconfirmed" />

        <TextView
            android:id="@+id/nDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/nconfirmed"
            android:layout_alignStart="@id/nconfirmed"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="5dp"
            android:text="@string/mortos" />

        <TextView
            android:id="@+id/Deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/nDeaths"
            android:layout_toRightOf="@id/nDeaths" />

        <TextView
            android:id="@+id/nActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nconfirmed"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/ativos" />

        <TextView
            android:id="@+id/Active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/nActive"
            android:layout_toRightOf="@id/nActive" />

        <TextView
            android:id="@+id/nRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/nActive"
            android:layout_alignStart="@id/nActive"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="5dp"
            android:text="@string/recuperados" />

        <TextView
            android:id="@+id/Recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/nRecovered"
            android:layout_toRightOf="@id/nRecovered" />

    </RelativeLayout>

</RelativeLayout>