<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.HomeActivity">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnnoticias"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/robotomedium"
            android:text="@string/noticias"
            android:textColor="@color/grey"
            android:textSize="8.5dp" />

        <Button
            android:id="@+id/btnsintomas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/robotomedium"
            android:text="@string/sintomas"
            android:textColor="@color/grey"
            android:textSize="8.5dp" />

        <Button
            android:id="@+id/btnlocation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/robotomedium"
            android:text="@string/meuestado"
            android:textColor="@color/grey"
            android:textSize="7dp" />

        <Button
            android:id="@+id/btnsummary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/robotomedium"
            android:text="@string/paises"
            android:textColor="@color/grey"
            android:textSize="8.5dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/head"
        android:background="@color/bluebackground" />

    <FrameLayout
        android:id="@+id/contenthome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/head" />

    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent" />

    <ProgressBar
        android:id="@+id/loadingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progressbar" />

</RelativeLayout>