<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.LocationFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ilustracovid"></ImageView>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_redondo"></ImageView>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white" />

        <TextView
            android:id="@+id/nestado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/estado"
            android:textColor="@color/blacktitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/nestado"
            android:layout_toRightOf="@id/nestado"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/nuf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/nestado"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="5dp"
            android:text="@string/uf"
            android:textColor="@color/blacktitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/uf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/nuf"
            android:layout_toRightOf="@id/nuf"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/ncasos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nestado"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/casos"
            android:textColor="@color/blacktitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/casos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/ncasos"
            android:layout_toRightOf="@id/ncasos"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/ndeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/ncasos"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="5dp"
            android:text="@string/mortes"
            android:textColor="@color/blacktitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/ndeaths"
            android:layout_toRightOf="@id/ndeaths"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/nsuspects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ncasos"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/suspeitos"
            android:textColor="@color/blacktitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/suspects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/nsuspects"
            android:layout_toRightOf="@id/nsuspects"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/nrefuses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/nsuspects"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="5dp"
            android:text="@string/descartados"
            android:textColor="@color/blacktitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/refuses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/nrefuses"
            android:layout_toRightOf="@id/nrefuses"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>