<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SummaryActivity">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/black">

        <Button
            android:id="@+id/btnnoticias"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Noticias"
            android:textSize="15sp"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/btnsintomas"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Sintomas"
            android:textSize="15sp"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/btncasos"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Meu \nEstado"
            android:textSize="15sp"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/btnsummary"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:textSize="15sp"
            android:text="Paises"/>

    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/head"
        android:fontFamily="sans-serif-black"
        android:text="@string/title"
        android:textColor="@color/blackLight"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/generalView"
            android:textColor="@color/blackLight"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/total_confirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="left"
            android:textColor="@color/redWarning"
            android:textSize="35sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/label_total_active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/totalActive"
                android:textColor="@color/blackLight" />

            <TextView
                android:id="@+id/total_actual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.55"
                android:gravity="right"
                android:textColor="@color/grayLight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/label_total_recovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/total_recovered"
                android:textColor="@color/blackLight" />

            <TextView
                android:id="@+id/total_recovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.1"
                android:gravity="right"
                android:textColor="@color/grayLight" />

            <TextView
                android:id="@+id/new_recovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.1"
                android:gravity="right"
                android:textColor="@color/grayLight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/label_total_deaths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/total_deaths"
                android:textColor="@color/blackLight" />

            <TextView
                android:id="@+id/total_deaths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.1"
                android:gravity="right"
                android:textColor="@color/grayLight" />

            <TextView
                android:id="@+id/new_deaths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.1"
                android:gravity="right"
                android:textColor="@color/grayLight" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/countries"
            android:textColor="@color/blackLight"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/countriesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</RelativeLayout>