<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.SummaryFragment">

    <ImageView
        android:id="@+id/imagemundo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/mundo">

    </ImageView>


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagemundo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/total_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/redWarning"
            android:textSize="25sp"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/label_total_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:text="@string/totalActive"
                android:textColor="@color/blacktitle" />

            <TextView
                android:id="@+id/total_actual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.55"
                android:gravity="right"
                android:textColor="@color/blacktitle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/label_total_recovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:text="@string/total_recovered"
                android:textColor="@color/blacktitle" />

            <TextView
                android:id="@+id/total_recovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.1"
                android:gravity="right"
                android:textColor="@color/blacktitle" />

            <TextView
                android:id="@+id/mais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="+"
                android:textColor="@color/blacktitle"></TextView>

            <TextView
                android:id="@+id/new_recovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:gravity="right"
                android:textColor="@color/blacktitle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/label_total_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:text="@string/total_deaths"
                android:textColor="@color/blacktitle" />

            <TextView
                android:id="@+id/total_deaths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.1"
                android:gravity="right"
                android:textColor="@color/blacktitle" />

            <TextView
                android:id="@+id/mais2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="+"
                android:textColor="@color/blacktitle"></TextView>

            <TextView
                android:id="@+id/new_deaths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:gravity="right"
                android:textColor="@color/blacktitle" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/countries"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listacountries"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>